--- a/dts/bindings/infineon,tlv493d.yaml
+++ b/dts/bindings/infineon,tlv493d.yaml
@@ -7,7 +7,7 @@ include: base.yaml
 
 properties:
   reg:
-    type: int
+    type: array
     required: true
     description: I2C address of the sensor
   
