--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@
 zephyr_library()
 
 # zephyr_library_sources_ifdef(CONFIG_TLV493D src/tlv493d.c)
-zephyr_library_sources_ifdef(src/tlv493d.c)
+zephyr_library_sources(src/tlv493d.c)
 zephyr_library_sources(src/tlv493d_behavior.c)
