--- a/Kconfig
+++ b/Kconfig
@@ -13,6 +13,8 @@ menuconfig TLV493D
     help
       Enable support for the Infineon TLV493D 3D Magnetic Sensor.
 
+if TLV493D
+
 config TLV493D_POLL_RATE_MS
     int "Polling rate (ms)"
     depends on TLV493D
@@ -20,3 +22,9 @@ config TLV493D_POLL_RATE_MS
     range 10 1000
     help
       Defines the interval (in milliseconds) for polling TLV493D sensor data.
+
+# module = TLV493D
+# module-str = TLV493D
+# source = "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config"
+
+endif #TLV493D
