--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(CONFIG_TLV493d)
     zephyr_library()
     zephyr_library_sources(src/tlv493d.c)
-    zephyr_library_sources(src/tlv493d_behavior.c)
+    # zephyr_library_sources(src/tlv493d_behavior.c)
     zephyr_library_include_directories(${CMAKE_SOURCE_DIR}/include)
 endif()
